feat: Enhance order payment notifications and update API keys

--- a/BlindTreasure.API/appsettings.Development.json
+++ b/BlindTreasure.API/appsettings.Development.json
@@ -6,12 +6,7 @@
     }
   },
   "Gemini": {
-    "ApiKey": "AIzaSyDhVTx14sb18U40c8ugYxx9GIw3SHW8oGI"
+    "ApiKey": "AIzaSyAWFSoZeH7tw0hv8VFZSl81hUFTPptuimo"
   },
-  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi",
-  "GHTK": {
-    "BaseUrl": "https://services-staging.ghtklab.com",
-    "ApiToken": "9EG5aMwxusUsDJdmKTAJqQ57XqAeaAzNE2MRqf",
-    "PartnerCode": "S22454193"
-  }
+  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi"
 }
