--- a/BlindTreasure.API/appsettings.json
+++ b/BlindTreasure.API/appsettings.json
@@ -21,10 +21,5 @@
     "PaymentWebhookSecret": "whsec_27oghO3aS6bvnF4bhRJkKjEfbtvegBAB",
     "RefundWebhookSecret": "whsec_Gfq592D8W2XSTtGctuExwP2oRFEtIwU6"
   },
-  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi",
-  "GHTK": {
-    "BaseUrl": "https://services-staging.ghtklab.com",
-    "ApiToken": "9EG5aMwxusUsDJdmKTAJqQ57XqAeaAzNE2MRqf",
-    "PartnerCode": "S22454193"
-  }
+  "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi"
 }
