fix: Secure Gemini API key handling and remove zip file

--- a/BlindTreasure.API/appsettings.Development.json
+++ b/BlindTreasure.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "Gemini": {
-    "ApiKey": "AIzaSyAWFSoZeH7tw0hv8VFZSl81hUFTPptuimo"
+    "ApiKey": ""
   },
   "IssuerSigningKey": "olcjcHn1cJGjewCTy1rRDFOak88VZzbi"
 }
